# match_cv

./: .coverage  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: search_pipeline_flow.drawio  upload_flow.drawio
media/cv_uploads/: alice_cv.txt
postman/: match-cv-api.postman_collection.json
src/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/core/: admin.py  db.py  models.py  serializers.py  tasks.py  urls.py  views.py
src/core/inject/: extraction.py  inject.py  inject_job_description.py  injection.py  injestion_pipeline.yaml
src/core/migrations/: 0001_initial.py  0002_jobdescription.py  0002_searchrun.py  0002_uploadbatch_uploaditem.py  0003_jobdescription_education_jobdescription_experience_and_more.py  0004_jobdescription_split_text_fields.py  0005_merge_20260309_1236.py  0006_alter_searchrun_options_searchrun_job_description_id.py
src/core/retrieve/: pipeline.py  rag.py
src/core/services/: __init__.py  ingestion.py
tests/: conftest.py  test_scoring.py  test_serializers.py  test_tasks.py  test_views.py
tests/inject/: test_text_extract.py
